@startuml UAV Swarm Class Diagram
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

' ═══════════════════ PORTS ═══════════════════════════════════

interface CommandDispatcher <<port>> {
  +send_command(drone_id: &str, target: Position): async Result<(), String>
}

interface EventPublisher <<port>> {
  +publish(event: DroneUpdate)
  +subscribe(): Receiver<DroneUpdate>
}

interface DroneStateSource <<port>> {
  +fetch_states(): async Result<HashMap<String, DroneState>>
}

interface SimulationEngine <<port>> {
  +initialize(): async Result<(), String>
  +update_drones(drones, dt): async Result<(), String>
  +shutdown(): async Result<(), String>
  +mode(): SimulationMode
  +is_connected(): bool
}

class DroneState <<port DTO>> {
  +position: Position
  +velocity: Velocity
}

enum DroneUpdate <<port event>> {
  PositionUpdate { drone_id, position, velocity }
  StatusChange { drone_id, status }
  FormationUpdate { formation_stable }
  MissionProgress { mission_id, waypoint }
}

' ═══════════════════ SECONDARY ADAPTERS ══════════════════════

class BroadcastEventPublisher <<adapter>> {
  -tx: Sender<DroneUpdate>
  --
  +new(capacity: usize): Self
  +publish(event: DroneUpdate)
  +subscribe(): Receiver<DroneUpdate>
}

class NullEventPublisher <<adapter>> {
  --
  +new(): Self
  +publish(_event: DroneUpdate)
  +subscribe(): Receiver<DroneUpdate>
}

class GazeboCommandDispatcher <<adapter>> {
  -client: Client
  -bridge_url: String
  --
  +new(bridge_url: String, timeout_ms: u64): Self
  +send_command(drone_id, target): async Result
}

class InternalCommandDispatcher <<adapter>> {
  --
  +send_command(drone_id, target): async Result
}

class GazeboDroneStateSource <<adapter>> {
  -client: Client
  -bridge_url: String
  --
  +new(bridge_url: String, timeout_ms: u64): Self
  +fetch_states(): async Result<HashMap<String, DroneState>>
}

class GazeboSimulationEngine <<adapter>> {
  -client: Client
  -bridge_url: String
  -connected: bool
  -state_source: Box<dyn DroneStateSource>
  --
  +new(bridge_url: String, timeout_ms: u64): Self
  +new_with_state_source(bridge_url, timeout_ms, source): Self
}

class InternalSimulationEngine <<adapter>> {
  --
  ' physics update: drone.update_position(dt)
}

' ═══════════════════ PRIMARY ADAPTER — AppState ══════════════

class AppState <<adapter>> {
  +swarm: Arc<Mutex<DroneSwarm>>
  +event_publisher: Arc<dyn EventPublisher>
  +simulation_config: Arc<SimulationConfig>
  --
  +new(swarm: DroneSwarm): Self
  +new_with_config(swarm, config): Self
}

' ═══════════════════ DOMAIN ══════════════════════════════════

class Position <<value object>> {
  +x: f64
  +y: f64
  +z: f64
  --
  +new(x, y, z): Position
  +distance_to(&Position): f64
  +add(&Position): Position
  +subtract(&Position): Position
  +normalize(): Position
  +scale(f64): Position
}

class Velocity <<value object>> {
  +vx: f64
  +vy: f64
  +vz: f64
  --
  +new(vx, vy, vz): Velocity
  +zero(): Velocity
  +magnitude(): f64
}

enum DroneStatus {
  Idle
  Navigating
  InFormation
  ExecutingMission
  Error(String)
}

class Drone <<entity>> {
  +id: String
  +position: Position
  +velocity: Velocity
  +status: DroneStatus
  +target_position: Option<Position>
  +formation_offset: Option<Position>
  +max_speed: f64
  --
  +new(id, initial_position): Drone
  +move_to(target: Position)
  +set_formation_offset(offset: Position)
  +update_position(dt: f64)
  +get_status_info(): DroneStatusInfo
}

enum FormationType {
  Triangle
  Line
  VFormation
}

class FormationManager <<domain service>> {
  +formation_type: FormationType
  +separation_distance: f64
  -formation_offsets: HashMap<String, Position>
  --
  +new(): FormationManager
  +set_formation_type(FormationType)
  +set_separation_distance(f64)
  +add_drone(String)
  +update_formation(&mut HashMap<String, Drone>)
  +is_formation_stable(&HashMap<String, Drone>): bool
  --
  -calculate_offsets()
  -calculate_triangle_formation(&[String])
  -calculate_line_formation(&[String])
  -calculate_v_formation(&[String])
}

enum MissionType {
  MoveTo(Position)
  Patrol(Vec<Position>)
  Search(Position, f64)
}

enum MissionStatus {
  NotStarted
  InProgress
  Completed
  Failed(String)
}

class Mission <<entity>> {
  +id: String
  +mission_type: MissionType
  +status: MissionStatus
  +assigned_drones: Vec<String>
  +waypoints: Vec<Position>
  +current_waypoint: usize
  --
  +new(id, mission_type): Mission
  +assign_drones(Vec<String>)
  +start()
  +get_current_target(): Option<Position>
  +advance_waypoint(): bool
}

class MissionExecutor <<domain service>> {
  +active_missions: HashMap<String, Mission>
  -mission_counter: u32
  --
  +new(): MissionExecutor
  +create_mission(MissionType, Vec<String>): String
  +start_mission(&str): Result<(), String>
  +cancel_mission(&str): Result<(), String>
  +get_mission_status(&str): Option<&MissionStatus>
}

class DroneSwarm <<aggregate root>> {
  +drones: HashMap<String, Drone>
  +formation_manager: FormationManager
  +mission_executor: MissionExecutor
  +simulation_running: bool
  --
  +new(): DroneSwarm
  +add_drone(&str, Position)
  +set_formation(&str): async
  +update_swarm(): async
  +tick_mission_by_id(&str): Result<bool, String>
  +get_swarm_status(): Vec<DroneStatusInfo>
  +stop_simulation()
}

' ═══════════════════ RELATIONS ═══════════════════════════════

' Port implementations
BroadcastEventPublisher ..|> EventPublisher
NullEventPublisher ..|> EventPublisher
GazeboCommandDispatcher ..|> CommandDispatcher
InternalCommandDispatcher ..|> CommandDispatcher
GazeboDroneStateSource ..|> DroneStateSource
GazeboSimulationEngine ..|> SimulationEngine
InternalSimulationEngine ..|> SimulationEngine

' AppState injects EventPublisher
AppState o-- EventPublisher : Arc<dyn>
AppState o-- DroneSwarm : Arc<Mutex<>>

' GazeboSimulationEngine uses DroneStateSource
GazeboSimulationEngine o-- DroneStateSource : state_source (Box<dyn>)

' Domain relations
DroneSwarm "1" *-- "1" FormationManager : owns
DroneSwarm "1" *-- "1" MissionExecutor : owns
DroneSwarm "1" o-- "*" Drone : manages

Drone "1" *-- "1" Position : has
Drone "1" *-- "1" Velocity : has
Drone "1" *-- "1" DroneStatus : has

FormationManager "1" *-- "1" FormationType : uses

Mission "1" *-- "1" MissionType : has
Mission "1" *-- "1" MissionStatus : has
Mission "1" o-- "*" Position : waypoints

MissionExecutor "1" o-- "*" Mission : manages

' Events
EventPublisher ..> DroneUpdate : publishes

@enduml
